<resources>
    <string name="app_name">apps2324.p4.CarlesHernandez</string>
    <string name="login">Login</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="register">Register</string>
    <string name="already_account">Already have an account? Login now</string>
    <string name="clickto_register">click here to register</string>
    <string name="logout">Logout</string>
    <string name="profile">profile</string>
    <string name="app_title">My ToDo App</string>

    <string name="profile_image_desc">Profile Image</string>
    <string name="username_placeholder">Username</string>
    <string name="email_placeholder">email@example.com</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="go_back">Go Back</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_tasks">My Tasks</string>
    <string name="add_task">Add Task</string>
    <string name="task_title">Task Title</string>
    <string name="task_description">Task Description</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="due_date">Due Date</string>
    <string name="priority">Priority</string>
    <string name="completed">Completed</string>
    <string name="close">Close</string>
    <string name="share">Share</string>
    <string name="new_task">New Task</string>
    <string name="due_date_yyyy_mm_dd">Due Date (YYYY-MM-DD)</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="quote">Quote</string>
    <string name="author">Author</string>
    <string name="don_t_give_up">Don\'t give up!</string>
    <string name="motivation">motivation</string>

</resources>