<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp"
    tools:ignore="UseSwitchCompatOrMaterialXml">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textSize="60sp"
        android:textStyle="bold"
        android:paddingBottom="4dp"
        android:gravity="center"/>

    <TextView
        android:id="@+id/tvDescriptionLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:textStyle="bold"
        android:textSize="18sp"
        android:paddingBottom="4dp"
        android:gravity="center"/>

    <TextView
        android:id="@+id/tvDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:paddingBottom="16dp"
        android:gravity="center"/>

    <TextView
        android:id="@+id/tvDueDateLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/due_date"
        android:textStyle="bold"
        android:textSize="18sp"
        android:paddingBottom="4dp"
        android:gravity="center"/>

    <TextView
        android:id="@+id/tvDueDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:paddingBottom="16dp"
        android:gravity="center"/>

    <TextView
        android:id="@+id/tvPriorityLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/priority"
        android:textStyle="bold"
        android:textSize="18sp"
        android:paddingBottom="4dp"
        android:gravity="center"/>

    <TextView
        android:id="@+id/tvPriority"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:paddingBottom="16dp"
        android:gravity="center"/>

    <TextView
        android:id="@+id/tvIsCompletedLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/completed"
        android:textStyle="bold"
        android:textSize="18sp"
        android:paddingBottom="4dp"
        android:gravity="center"/>

    <Switch
        android:id="@+id/switchIsCompleted"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="70dp"
        android:text=""/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:gravity="center">

        <Button
            android:id="@+id/btnShare"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/share"/>

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">
        </Space>

        <Button
            android:id="@+id/btnClose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/close"/>

    </LinearLayout>



</LinearLayout>
